<resources>
    <string name="app_name">F I T</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_create_recipe">Create Recipe</string>
    <string name="title_create_ingredient">Create Ingredient</string>
    <string name="title_my_recipes">My Recipes</string>
    <string name="title_my_ingredients">My Ingredients</string>
    <string name="title_other">Options</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="title_logout">Logout</string>
    <string name="login"><u>Login!</u></string>
    <string name="signup"><u>Sign Up!</u></string>
    <string name="slogan">Find The Fun In Training!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!--    Tags-->
    <string name="fragment_home_tag">Fragment Home</string>
    <string name="fragment_ingredients_tag">Fragment Ingredients</string>
    <string name="fragment_recipes_tag">Fragment Recipes</string>
    <string name="fragment_workouts_tag">Fragment Workouts</string>
    <string name="fragment_recipe_details_tag">Fragment Recipe Details</string>
    <string name="create_ingredient">Create Ingredient</string>
    <string name="title">Title</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="add_new_value">Add new value</string>
    <string name="description">Description</string>
    <string name="create_ingredient">Create Ingredient</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="title">Title</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="add_new_value">Add new value</string>
    <string name="cooking_method">Cooking method</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="start_now">Start Now!</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_2">Login</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="username_is_taken_by_another_person">Username is taken by another person</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="title">Title</string>
    <string name="description">Description</string>


</resources>
