<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/navigation_ingredients"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_ingredients" />
    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_workouts"  />

</menu>
