<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.anastasi.fit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.anastasi.fit.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.anastasi.fit.ui.ingredients.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients" />
    <fragment
        android:id="@+id/navigation_workouts"
        android:name="com.anastasi.fit.ui.workouts.WorkoutsFragment"
        android:label="@string/title_workouts"
        tools:layout="@layout/fragment_workouts" />
</navigation>
