<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            app:srcCompat="@drawable/logo_transparent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_2"
            android:textAlignment="center"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_username_or_password"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/error_color"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="172dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"

            android:onClick="loginButtonClicked"
            android:text="@string/login_2"
            android:textColor="@color/text_color"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="viewEnd" />

            <Button
                android:id="@+id/textView5"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:onClick="signupButton"
                android:paddingRight="40dp"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>